--- a/login.html
+++ b/login.html
@@ -263,7 +263,6 @@
       margin-top: 1px;
     }
 
-    /* Camera overlay and shutter on camera screen only */
     #camera-overlay {
       display: none;
       position: fixed;
@@ -373,7 +372,8 @@
       </button>
     </div>
 
-    <input type="file" id="initialFile" accept="image/*" />
+    <!-- Accept multiple images for the gallery button -->
+    <input type="file" id="initialFile" accept="image/*" multiple />
 
     <div id="ocr-result"></div>
     
@@ -543,19 +543,33 @@
       fileInput.click();
     });
 
+    // Multiple image OCR logic for gallery
     fileInput.addEventListener("change", async function () {
-      const file = this.files[0];
-      if (!file) return;
+      const files = Array.from(this.files);
+      if (files.length === 0) return;
 
-      try {
-        result = await mrzscanner.launch(file);
-        console.log("MRZ Result from gallery image:", result);
-        runTesseractOCR(file);
-      } catch (err) {
-        console.warn("MRZ scan failed, falling back to Tesseract OCR...");
-        runTesseractOCR(file);
+      // Only allow max 2 images for Front and Back
+      if (files.length > 2) {
+        alert('Please select only 2 images (Front and Back)');
+        this.value = "";
+        return;
       }
 
+      // OCR both images, label as "Front" and "Back"
+      const labels = ['Front', 'Back'];
+      for (let i = 0; i < files.length; i++) {
+        try {
+          // Launch MRZ scanner (optional, but fallback to Tesseract anyway)
+          try {
+            await mrzscanner.launch(files[i]);
+          } catch (err) {
+            // Ignore MRZ error for gallery, fallback to Tesseract
+          }
+          runTesseractOCR(files[i], labels[i] || `Image${i + 1}`, true);
+        } catch (err) {
+          ocrResultDiv.innerText += `\n[${labels[i] || `Image${i + 1}`}] Submit Both Front and Back 1 by 1 then Authenticate.\n`;
+        }
+      }
       this.value = "";
     });
 
@@ -581,7 +595,8 @@
           }
         }).catch(err => {
           console.error(`[${label}] OCR error:`, err);
-          ocrResultDiv.innerText += `\nSubmit 2 images Front and Back of your Insurance Card\n`;
+          // Update error message as requested
+          ocrResultDiv.innerText += `\nSubmit Both Front and Back 1 by 1 then Authenticate.\n`;
         });
       };
       if (typeof input === "string") {
@@ -591,7 +606,6 @@
         reader.onload = () => processImage(reader.result);
         reader.readAsDataURL(input);
       } else {
-        console.warn(`[${label}] Invalid input for OCR`);
         ocrResultDiv.innerText += `\n[${label}] Invalid input for OCR.\n`;
       }
     }
