--- a/EEG.html
+++ b/EEG.html
@@ -1,18 +1,16 @@
-
-
-`html
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>EEG Dashboard</title>
+  <title>EEG Dashboard HD</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background: transparent;
+      background: black;
     }
+
     #video {
       position: fixed;
       top: 0; left: 0;
@@ -20,28 +18,21 @@
       height: 100vh;
       object-fit: cover;
       z-index: 0;
+      filter: brightness(0.9) contrast(1.1);
     }
-    #startBtn {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      background: red;
-      color: white;
-      padding: 15px 30px;
-      font-size: 18px;
-      border: none;
-      z-index: 3;
-      cursor: pointer;
-    }
+
+    /* CLOCK + METRICS */
     #clock {
       position: fixed;
       top: 20px;
       right: 20px;
       font-size: 32px;
       font-family: monospace;
-      color: lime;
+      color: #00ff80;
       z-index: 3;
+      text-shadow: 0 0 10px #00ff80;
     }
+
     #metrics {
       position: fixed;
       top: 70px;
@@ -51,12 +42,19 @@
       z-index: 3;
       line-height: 1.4em;
     }
-    #metrics div { margin-bottom: 4px; }
-    #eegHz { color: white; }
+
+    #metrics div {
+      margin-bottom: 4px;
+      text-shadow: 0 0 8px rgba(255,255,255,0.6);
+    }
+
+    #eegHz { color: cyan; }
     #eegNote { font-size: 14px; color: white; }
     #heartRate { color: red; }
-    #oximeter { color: limegreen; }
+    #oximeter { color: lime; }
     #eegHash { color: deeppink; }
+
+    /* CHART AREA */
     #chartContainer {
       position: fixed;
       top: 130px;
@@ -68,30 +66,105 @@
       scroll-snap-type: x mandatory;
       z-index: 2;
     }
+
     .chartCanvas {
       width: 4in;
       height: 2.5in;
       flex: 0 0 auto;
-      background: transparent;
+      background: rgba(0,0,0,0.2);
       scroll-snap-align: start;
+      backdrop-filter: blur(6px);
+      border-radius: 16px;
+      margin: 0 10px;
+      box-shadow: 0 0 15px rgba(0,255,255,0.2);
     }
+
+    /* CAMERA CONTROLS */
+    .button-container {
+      position: fixed;
+      bottom: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      align-items: center;
+      gap: 80px;
+      z-index: 10;
+    }
+
+    .camera-btn {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      border: 3px solid rgba(255,255,255,0.4);
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 30px;
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(8px);
+      box-shadow: 0 0 25px rgba(255,255,255,0.2);
+      transition: all 0.2s ease-in-out;
+    }
+
+    #snapshotBtn {
+      border: 3px solid rgba(255,0,0,0.7);
+      color: #ff4d4d;
+    }
+
+    #flipBtn {
+      border: 3px solid rgba(255,255,255,0.7);
+      color: white;
+    }
+
+    .camera-btn:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 30px rgba(255,255,255,0.4);
+    }
+
+    .button-label {
+      position: absolute;
+      bottom: -28px;
+      width: 100%;
+      text-align: center;
+      font-family: "Helvetica", sans-serif;
+      font-size: 14px;
+      color: white;
+      opacity: 0.9;
+      text-shadow: 0 0 6px rgba(255,255,255,0.4);
+    }
+
+    #canvas { display: none; }
   </style>
 </head>
 <body>
   <video id="video" autoplay muted playsinline></video>
-  <button id="startBtn">🎥 Start Camera</button>
+  <canvas id="canvas"></canvas>
+
   <div id="clock">30:00</div>
   <div id="metrics">
     <div id="eegHz">EEG Hertz: -- Hz</div>
-    <div id="eegNote">(Hold Camera 2–7 inches away from your Scalp Swirl on your Head)</div>
+    <div id="eegNote">(Hold Camera 2–7 inches from your scalp swirl)</div>
     <div id="heartRate">Heart Rate: -- bpm</div>
     <div id="oximeter">SpO₂: --%</div>
     <div id="eegHash">EEG Process: --</div>
   </div>
+
   <div id="chartContainer">
     <canvas id="barChart" class="chartCanvas"></canvas>
     <canvas id="lineChart" class="chartCanvas"></canvas>
     <canvas id="radarChart" class="chartCanvas"></canvas>
+  </div>
+
+  <div class="button-container">
+    <div style="position: relative;">
+      <button id="snapshotBtn" class="camera-btn">📸</button>
+      <div class="button-label">Snapshot</div>
+    </div>
+    <div style="position: relative;">
+      <button id="flipBtn" class="camera-btn">🔄</button>
+      <div class="button-label">Flip Camera</div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -108,8 +181,7 @@
     const alpha = 0.2989, beta = 0.5870, gamma = 0.1140;
     const samplingRate = 30;
     const bufferLength = 256;
-    let signalBuffer = [], peakTimes = [];
-    let latestBandPower = {};
+    let signalBuffer = [], peakTimes = [], latestBandPower = {};
 
     const video = document.getElementById('video');
     const barCtx = document.getElementById('barChart').getContext('2d');
@@ -117,21 +189,54 @@
     const radarCtx = document.getElementById('radarChart').getContext('2d');
 
     let barChart, lineChart, radarChart;
+    let stream = null;
+    let usingFrontCamera = true;
 
-    document.getElementById('startBtn').onclick = () => {
-      navigator.mediaDevices.getUserMedia({ video: true }).then(stream => {
+    async function startCamera() {
+      if (stream) stream.getTracks().forEach(track => track.stop());
+
+      const constraints = {
+        video: { facingMode: usingFrontCamera ? 'user' : 'environment', width: { ideal: 1920 }, height: { ideal: 1080 } },
+        audio: false
+      };
+
+      try {
+        stream = await navigator.mediaDevices.getUserMedia(constraints);
         video.srcObject = stream;
-        document.getElementById('startBtn').style.display = 'none';
-        startCountdown(30 * 60);
         requestAnimationFrame(processFrame);
-      });
-    };
+      } catch (err) {
+        console.error('Camera Error:', err);
+      }
+    }
 
-    function processFrame() {
-      const canvas = document.createElement('canvas');
+    document.getElementById('snapshotBtn').addEventListener('click', () => {
+      const canvas = document.getElementById('canvas');
+      const ctx = canvas.getContext('2d');
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
-      const ctx = canvas.getContext('2d');
+      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      const img = canvas.toDataURL('image/png');
+      const link = document.createElement('a');
+      link.href = img;
+      link.download = 'snapshot.png';
+      link.click();
+    });
+
+    document.getElementById('flipBtn').addEventListener('click', async () => {
+      usingFrontCamera = !usingFrontCamera;
+      await startCamera();
+    });
+
+    function processFrame() {
+      if (!video.videoWidth || !video.videoHeight) {
+        requestAnimationFrame(processFrame);
+        return;
+      }
+
+      const tempCanvas = document.createElement('canvas');
+      tempCanvas.width = video.videoWidth;
+      tempCanvas.height = video.videoHeight;
+      const ctx = tempCanvas.getContext('2d');
       ctx.drawImage(video, 0, 0);
       const frame = ctx.getImageData(video.videoWidth / 2, video.videoHeight / 2, 100, 100).data;
 
@@ -142,10 +247,10 @@
         b += frame[i + 2];
         count++;
       }
-      r /= count; g /= count; b /= count;
-      const s = alpha  r + beta  g + gamma * b;
-      signalBuffer.push(s);
 
+      r /= count; g /= count; b /= count;
+      const s = alpha * r + beta * g + gamma * b;
+      signalBuffer.push(s);
       detectPeak(s);
 
       if (signalBuffer.length >= bufferLength) {
@@ -176,8 +281,8 @@
 
       const freqs = Array(signal.length / 2).fill(0).map((_, i) => i * samplingRate / signal.length);
       const power = freqs.map((f, i) => {
-        const re = out[2  i], im = out[2  i + 1];
-        return re  re + im  im;
+        const re = out[2 * i], im = out[2 * i + 1];
+        return re * re + im * im;
       });
 
       const bandPower = {};
@@ -185,29 +290,41 @@
         const indices = freqs.map((f, i) => (f >= low && f <= high ? i : -1)).filter(i => i !== -1);
         bandPower[band] = indices.reduce((sum, i) => sum + power[i], 0);
       }
-
       return bandPower;
     }
+
+    const spectrumColors = [
+      'rgb(0,0,255)', 'rgb(0,255,0)', 'rgb(255,255,0)', 'rgb(255,165,0)', 'rgb(255,0,0)'
+    ];
 
     function updateCharts(data) {
       const labels = Object.keys(data);
       const values = Object.values(data);
-      const colors = ['rgba(255,0,0,0.5)','rgba(0,255,0,0.5)','rgba(0,0,255,0.5)','rgba(0,255,255,0.5)','rgba(255,0,255,0.5)'];
+
+      const chartOptions = {
+        responsive: true,
+        plugins: { legend: { display: false } },
+        scales: {
+          r: { angleLines: { color: 'rgba(255,255,255,0.2)' }, grid: { color: 'rgba(255,255,255,0.2)' } },
+          x: { ticks: { color: 'white' }, grid: { color: 'rgba(255,255,255,0.1)' } },
+          y: { ticks: { color: 'white' }, grid: { color: 'rgba(255,255,255,0.1)' } }
+        }
+      };
 
       if (!barChart) {
         barChart = new Chart(barCtx, {
           type: 'bar',
-          data: { labels, datasets: [{ data: values, backgroundColor: colors }] },
+          data: { labels, datasets: [{ data: values, backgroundColor: spectrumColors }] },
           options: chartOptions
         });
         lineChart = new Chart(lineCtx, {
           type: 'line',
-          data: { labels, datasets: [{ data: values, borderColor: 'white', backgroundColor: 'transparent' }] },
+          data: { labels, datasets: [{ data: values, borderColor: 'white', pointBackgroundColor: spectrumColors }] },
           options: chartOptions
         });
         radarChart = new Chart(radarCtx, {
           type: 'radar',
-          data: { labels, datasets: [{ data: values, borderColor: 'white', backgroundColor: 'rgba(255,255,255,0.1)' }] },
+          data: { labels, datasets: [{ data: values, borderColor: 'white', backgroundColor: 'rgba(255,255,255,0.1)', pointBackgroundColor: spectrumColors }] },
           options: chartOptions
         });
       } else {
@@ -220,4 +337,7 @@
       }
     }
 
-    const chartOptions =
+    window.addEventListener('load', startCamera);
+  </script>
+</body>
+</html>
