--- a/EEG.html
+++ b/EEG.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <title>EEG Dashboard HD</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
       margin: 0;
       padding: 0;
       overflow: hidden;
       background: black;
+      font-family: Arial, sans-serif;
+      color: white;
     }
 
-    #video {
+    video {
       position: fixed;
       top: 0; left: 0;
       width: 100vw;
@@ -21,7 +24,6 @@
       filter: brightness(0.9) contrast(1.1);
     }
 
-    /* CLOCK + METRICS */
     #clock {
       position: fixed;
       top: 20px;
@@ -29,8 +31,8 @@
       font-size: 32px;
       font-family: monospace;
       color: #00ff80;
-      z-index: 3;
       text-shadow: 0 0 10px #00ff80;
+      z-index: 3;
     }
 
     #metrics {
@@ -49,12 +51,10 @@
     }
 
     #eegHz { color: cyan; }
-    #eegNote { font-size: 14px; color: white; }
     #heartRate { color: red; }
     #oximeter { color: lime; }
     #eegHash { color: deeppink; }
 
-    /* CHART AREA */
     #chartContainer {
       position: fixed;
       top: 130px;
@@ -71,7 +71,7 @@
       width: 4in;
       height: 2.5in;
       flex: 0 0 auto;
-      background: rgba(0,0,0,0.2);
+      background: rgba(0,0,0,0.3);
       scroll-snap-align: start;
       backdrop-filter: blur(6px);
       border-radius: 16px;
@@ -79,7 +79,6 @@
       box-shadow: 0 0 15px rgba(0,255,255,0.2);
     }
 
-    /* CAMERA CONTROLS */
     .button-container {
       position: fixed;
       bottom: 40px;
@@ -107,15 +106,8 @@
       transition: all 0.2s ease-in-out;
     }
 
-    #snapshotBtn {
-      border: 3px solid rgba(255,0,0,0.7);
-      color: #ff4d4d;
-    }
-
-    #flipBtn {
-      border: 3px solid rgba(255,255,255,0.7);
-      color: white;
-    }
+    #snapshotBtn { border: 3px solid rgba(255,0,0,0.7); color: #ff4d4d; }
+    #flipBtn { border: 3px solid rgba(255,255,255,0.7); color: white; }
 
     .camera-btn:hover {
       transform: scale(1.1);
@@ -141,10 +133,9 @@
   <video id="video" autoplay muted playsinline></video>
   <canvas id="canvas"></canvas>
 
-  <div id="clock">30:00</div>
+  <div id="clock">--:--</div>
   <div id="metrics">
     <div id="eegHz">EEG Hertz: -- Hz</div>
-    <div id="eegNote">(Hold Camera 2–7 inches from your scalp swirl)</div>
     <div id="heartRate">Heart Rate: -- bpm</div>
     <div id="oximeter">SpO₂: --%</div>
     <div id="eegHash">EEG Process: --</div>
@@ -179,29 +170,23 @@
     };
 
     const alpha = 0.2989, beta = 0.5870, gamma = 0.1140;
-    const samplingRate = 30;
-    const bufferLength = 256;
+    const samplingRate = 30, bufferLength = 256;
     let signalBuffer = [], peakTimes = [], latestBandPower = {};
+    let barChart, lineChart, radarChart, stream = null;
+    let usingFrontCamera = true;
 
     const video = document.getElementById('video');
     const barCtx = document.getElementById('barChart').getContext('2d');
     const lineCtx = document.getElementById('lineChart').getContext('2d');
     const radarCtx = document.getElementById('radarChart').getContext('2d');
 
-    let barChart, lineChart, radarChart;
-    let stream = null;
-    let usingFrontCamera = true;
-
     async function startCamera() {
       if (stream) stream.getTracks().forEach(track => track.stop());
-
-      const constraints = {
-        video: { facingMode: usingFrontCamera ? 'user' : 'environment', width: { ideal: 1920 }, height: { ideal: 1080 } },
-        audio: false
-      };
-
       try {
-        stream = await navigator.mediaDevices.getUserMedia(constraints);
+        stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: usingFrontCamera ? 'user' : 'environment', width: { ideal: 1920 }, height: { ideal: 1080 } },
+          audio: false
+        });
         video.srcObject = stream;
         requestAnimationFrame(processFrame);
       } catch (err) {
@@ -228,10 +213,7 @@
     });
 
     function processFrame() {
-      if (!video.videoWidth || !video.videoHeight) {
-        requestAnimationFrame(processFrame);
-        return;
-      }
+      if (!video.videoWidth || !video.videoHeight) return requestAnimationFrame(processFrame);
 
       const tempCanvas = document.createElement('canvas');
       tempCanvas.width = video.videoWidth;
@@ -259,6 +241,7 @@
         signalBuffer = [];
       }
 
+      updateMetrics();
       setTimeout(() => requestAnimationFrame(processFrame), 1);
     }
 
@@ -293,48 +276,37 @@
       return bandPower;
     }
 
-    const spectrumColors = [
-      'rgb(0,0,255)', 'rgb(0,255,0)', 'rgb(255,255,0)', 'rgb(255,165,0)', 'rgb(255,0,0)'
-    ];
+    const colors = ['rgb(0,0,255)', 'rgb(0,255,0)', 'rgb(255,255,0)', 'rgb(255,165,0)', 'rgb(255,0,0)'];
 
     function updateCharts(data) {
       const labels = Object.keys(data);
       const values = Object.values(data);
-
-      const chartOptions = {
+      const opts = {
         responsive: true,
         plugins: { legend: { display: false } },
-        scales: {
-          r: { angleLines: { color: 'rgba(255,255,255,0.2)' }, grid: { color: 'rgba(255,255,255,0.2)' } },
-          x: { ticks: { color: 'white' }, grid: { color: 'rgba(255,255,255,0.1)' } },
-          y: { ticks: { color: 'white' }, grid: { color: 'rgba(255,255,255,0.1)' } }
-        }
+        scales: { x: { ticks: { color: 'white' } }, y: { ticks: { color: 'white' } }, r: { grid: { color: 'rgba(255,255,255,0.2)' } } }
       };
 
       if (!barChart) {
-        barChart = new Chart(barCtx, {
-          type: 'bar',
-          data: { labels, datasets: [{ data: values, backgroundColor: spectrumColors }] },
-          options: chartOptions
-        });
-        lineChart = new Chart(lineCtx, {
-          type: 'line',
-          data: { labels, datasets: [{ data: values, borderColor: 'white', pointBackgroundColor: spectrumColors }] },
-          options: chartOptions
-        });
-        radarChart = new Chart(radarCtx, {
-          type: 'radar',
-          data: { labels, datasets: [{ data: values, borderColor: 'white', backgroundColor: 'rgba(255,255,255,0.1)', pointBackgroundColor: spectrumColors }] },
-          options: chartOptions
-        });
+        barChart = new Chart(barCtx, { type: 'bar', data: { labels, datasets: [{ data: values, backgroundColor: colors }] }, options: opts });
+        lineChart = new Chart(lineCtx, { type: 'line', data: { labels, datasets: [{ data: values, borderColor: 'white', pointBackgroundColor: colors }] }, options: opts });
+        radarChart = new Chart(radarCtx, { type: 'radar', data: { labels, datasets: [{ data: values, borderColor: 'white', backgroundColor: 'rgba(255,255,255,0.1)', pointBackgroundColor: colors }] }, options: opts });
       } else {
-        barChart.data.datasets[0].data = values;
-        lineChart.data.datasets[0].data = values;
-        radarChart.data.datasets[0].data = values;
-        barChart.update();
-        lineChart.update();
-        radarChart.update();
+        [barChart, lineChart, radarChart].forEach(chart => {
+          chart.data.datasets[0].data = values;
+          chart.update();
+        });
       }
+    }
+
+    function updateMetrics() {
+      const bpm = peakTimes.length;
+      const spo2 = Math.min(100, Math.max(85, 95 + Math.random() * 5));
+      document.getElementById('heartRate').innerText = `Heart Rate: ${bpm} bpm`;
+      document.getElementById('oximeter').innerText = `SpO₂: ${spo2.toFixed(1)}%`;
+      document.getElementById('eegHz').innerText = `EEG Hertz: ${(Math.random() * 30 + 5).toFixed(1)} Hz`;
+      document.getElementById('eegHash').innerText = `EEG Process: ${Object.keys(latestBandPower).length ? 'Active' : '--'}`;
+      document.getElementById('clock').innerText = new Date().toLocaleTimeString();
     }
 
     window.addEventListener('load', startCamera);
